--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -12,7 +12,8 @@ url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=sw
   --yellow: #FFCB05;
   --red: #ED3237;
   --grey: #A19E9E;
-
+  --white: #FFFF;
+  
 }
 body{
   background-color: var(--grey);
